[workspace]
resolver = "2"
members = [
    "crates/platform-core",
    "crates/platform-macros",
    "crates/event-script",
    "crates/event-script-macros",
    "benchmark/benchmark-reporter",
    "examples/hello-world",
    "examples/hello-flow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Accenture/mercury-composable"
