[workspace]
resolver = "2"
members = [
    "crates/platform-core",
    "crates/platform-macros",
    "crates/event-script",
    "crates/event-script-macros",
    "crates/knowledge-graph",
    "crates/knowledge-graph-macros",
    "benchmark/benchmark-reporter",
    "examples/hello-world",
    "examples/hello-flow",
    "examples/minigraph-playground",
]

[workspace.package]
version = "4.10.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Accenture/mercury-composable"
