[package]
name = "knowledge-graph-macros"
description = "Proc-macro annotations for the knowledge-graph layer (Java @FetchFeature analog)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
