[package]
name = "platform-core"
description = "Rust port of mercury-composable platform-core — the event-driven foundation layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
log = { version = "0.4", features = ["std"] }
# --- increment 2: event-bus foundation ---
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
async-channel = "2"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
uuid = { version = "1", features = ["v4"] }
