[package]
name = "platform-core"
description = "Rust port of mercury-composable platform-core — the event-driven foundation layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
log = { version = "0.4", features = ["std"] }
# --- increment 2: event-bus foundation ---
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "signal", "io-util"] }
async-trait = "0.1"
async-channel = "2"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
uuid = { version = "1", features = ["v4"] }
# --- increment 6: REST automation (D10 — hyper, not a web framework: rest.yaml IS the router) ---
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# --- increment 8: etag protocol (Java parity: SHA-256 content hash) ---
sha2 = "0.10"
