[package]
name = "platform-core"
description = "Rust port of mercury-composable platform-core — the event-driven foundation layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
log = { version = "0.4", features = ["std"] }
# --- increment 2: event-bus foundation ---
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "signal", "io-util"] }
async-trait = "0.1"
async-channel = "2"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
uuid = { version = "1", features = ["v4"] }
# --- increment 6: REST automation (D10 — hyper, not a web framework: rest.yaml IS the router) ---
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# --- increment K-7a: WebSocket server (design K6a — hyper upgrade + tungstenite) ---
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# --- increment 8: etag protocol (Java parity: SHA-256 content hash) ---
sha2 = "0.10"
# --- increment 48: outbound HTTPS for the async HTTP client (rustls; ring provider
# avoids a native cmake/asm toolchain; OS trust store mirrors the JDK default) ---
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-native-certs = "0.8"
# --- increment 10: annotation macros (Java @PreLoad/@BeforeApplication/@MainApplication) ---
inventory = "0.3"
platform-macros = { path = "../platform-macros" }

[dev-dependencies]
# self-signed certificates for the HTTPS client integration test (increment 48)
rcgen = "0.13"
# decode the golden envelope wire-format vectors (increment 59)
base64 = "0.22"
