[package]
name = "hello-flow"
description = "Example application — an event-script flow served over HTTP (layer 2 on layer 1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
platform-core = { path = "../../crates/platform-core" }
event-script = { path = "../../crates/event-script" }
async-trait = "0.1"
serde_json = "1"
log = "0.4"

[dev-dependencies]
rmpv = { version = "1", features = ["with-serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
