[package]
name = "hello-world"
description = "Example application — annotated composable functions on the platform-core foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
platform-core = { path = "../../crates/platform-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rmpv = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
