[package]
name = "minigraph-playground"
description = "Example application — the MiniGraph Playground (active knowledge graph, layer 3 on layers 2 & 1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
platform-core = { path = "../../crates/platform-core" }
event-script = { path = "../../crates/event-script" }
knowledge-graph = { path = "../../crates/knowledge-graph" }
async-trait = "0.1"
log = "0.4"
